[package]
name = "extactor-lua-embedding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
mlua = { version = "0.9.1", features = ["async", "lua54", "macros", "vendored"] }
thiserror = "1.0.48"
typed-builder = "0.16.0"
